@startuml AudioSystem

title Audio System - Class Diagram

package "Audio System" {

    class PlayerAudioEvents {
        + OnJump : event Action
        + OnDialogue : event Action
        + OnFootstep : event Action

        + Jump() : void
        + Dialogue() : void
        + Footstep() : void
    }

    class PlayerAudioController {
        - catSounds : AudioClip[]
        - humanSounds : AudioClip[]
        - jumpSounds : AudioClip[]
        - footstepSounds : AudioClip[]
        - dialogueAudioSource : AudioSource
        - sfxAudioSource : AudioSource
        - playerAudioEvents : PlayerAudioEvents
        - _settingsManager : SettingsManager

        - RequestDialogue() : void
        - RequestJumpSound() : void
        - RequestFootstepSound() : void

        - PlaySoundServerRpc() : void
        - PlaySoundClientRpc() : void
        - PlayJumpServerRpc() : void
        - PlayJumpClientRpc() : void
        - PlayFootstepServerRpc() : void
        - PlayFootstepClientRpc() : void

        - SoundSetup() : void
        - UpdateMasterVolume(float) : void
        - UpdateDialogueVolume(float) : void
        - UpdateSFXVolume(float) : void
        - UpdateMute(bool) : void
    }

    class PlayerFootstepAudio {
        - walkStepInterval : float
        - sprintStepInterval : float
        - sprintSpeed : float
        - controller : CharacterController
        - playerAudioEvents : PlayerAudioEvents
        - movement : PlayerMovement
        - stepTimer : float

        - HandleFootsteps() : void
    }

    class PlayerDialogueInput {
        - soundAction : InputActionReference
        - playerAudioEvents : PlayerAudioEvents

        - OnSound(InputAction.CallbackContext) : void
    }

    class SettingsManager
    class RoleController
    class PlayerMovement
}

PlayerDialogueInput --> PlayerAudioEvents : invokes Dialogue()
PlayerFootstepAudio --> PlayerAudioEvents : invokes Footstep()

PlayerAudioController --> PlayerAudioEvents : subscribes to events
PlayerAudioController --> SettingsManager : reads volume settings
PlayerAudioController --> RoleController : checks player role
PlayerFootstepAudio --> PlayerMovement : references movement

@enduml